--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -31,7 +31,7 @@
             const [showLogin, setShowLogin] = React.useState(false);
             const [username, setUsername] = React.useState('');
             const [currentUser, setCurrentUser] = React.useState(null);
-            const socket = io('http://localhost:5001');
+            const socket = io('https://secure-chat-lar5.onrender.com');
 
             React.useEffect(() => {
                 socket.on('connect', () => console.log('Connected to SecureChat'));
